# udemy_pandas

./: .gitignore
data-analysis-with-pandas-and-python/: .gitignore  README.md  pyproject.toml
data-analysis-with-pandas-and-python/Complete/: 01 - Installation and Setup.ipynb  02 - Python Crash Course.ipynb  03 - Series.ipynb  04 - DataFrames I - Introduction.ipynb  05 - DataFrames II - Filtering Data.ipynb  06 - DataFrames III - Data Extraction.ipynb  07 - Working with Text Data.ipynb  08 - MultiIndex.ipynb  09 - The GroupBy Object.ipynb  10 - Merging DataFrames.ipynb  11 - Working with Dates and Times.ipynb  12 - Input and Output.ipynb  13 - Visualization.ipynb  14 - Table Styling.ipynb  15 - Options and Settings.ipynb  google_stock_prices.csv  ibm.csv  roller_coasters.csv
data-analysis-with-pandas-and-python/Complete/io_examples/: server_logs.tsv
data-analysis-with-pandas-and-python/Incomplete/: 01 - Installation and Setup.ipynb  02 - Python Crash Course.ipynb  03 - Series.ipynb  04 - DataFrames I - Introduction.ipynb  05 - DataFrames II - Filtering Data.ipynb  06 - DataFrames III - Data Extraction.ipynb  07 - Working with Text Data.ipynb  08 - MultiIndex.ipynb  09 - The GroupBy Object.ipynb  10 - Merging DataFrames.ipynb  11 - Working with Dates and Times.ipynb  12 - Input and Output.ipynb  13 - Visualization.ipynb  14 - Table Styling.ipynb  15 - Options and Settings.ipynb  baby_names.csv  employee_skills.csv  home_sales.csv  hotel_bookings.csv  nba.csv  spotify.csv  superhero_academy.csv  temperatures.csv
(+3 files in other folders)
