[project]
name = "data-analysis-with-pandas-and-python"
version = "0.1.0"
description = "Data Analysis with Pandas and Python course"
readme = "README.md"
requires-python = "==3.14.*"
dependencies = [
    "jupyter-ruff>=0.3.1",
    "jupyterlab>=4.5.6",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pandas[excel,parquet,performance,plot]>=3.0.2",
]
